--- a/style.css
+++ b/style.css
@@ -1,44 +1,50 @@
-/* GENERAL */
+/* 
+	GENERAL 
+*/
 
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500;9..40,600&display=swap');
 
 * {
-  margin: 0;
-  padding: 0;
+  	margin: 0;
+  	padding: 0;
 }
 
 body {
-  font-family: 'DM Sans', sans-serif;;
+  	font-family: 'DM Sans', sans-serif;;
 }
 
 html {
-  scroll-behavior: smooth;
+  	scroll-behavior: smooth;
 }
 
 p {
-  color: rgb(85,85,85);
+  	color: rgb(85,85,85);
 }
 
-/* TRANSITION */
+/* 
+  	TRANSITION 
+*/
 
 a, .btn {
-  transition: all 300ms ease;
+  	transition: all 300ms ease;
 }
 
-/* DESKTOP NAV */
+/* 
+	DESKTOP NAV 
+*/
 
 nav, .nav-links {
-  display: flex;
+	display: flex;
 }
 
 nav {
-  justify-content: space-around;
-  align-items: center;
+	justify-content: space-around;
+	align-items: center;
 	height: 17vh;
 }
 
 .nav-links {
-	gap: 2rem;
+  	gap: 2rem;
 	list-style-type: none;
 	font-size: 1.5rem;
 }
@@ -66,7 +72,9 @@ a:hover {
 	cursor: default;
 }
 
-/* HAMBURGER MENU */
+/* 
+	HAMBURGER MENU 
+*/
 
 #hamburger-nav {
 	display: none;
@@ -97,7 +105,7 @@ a:hover {
 	position: absolute;
 	top: 100%;
 	right: 0%;
-	background-color: white;
+	/*background-color: white;*/
 	width: fit-content;
 	max-height: 0;
 	overflow: hidden;
@@ -158,7 +166,9 @@ section {
 	display: flex;
 }
 
-/* PROFILE SECTION */
+/* 
+	PROFILE SECTION 
+*/
 
 #profile {
 	display: flex;
@@ -189,7 +199,7 @@ section {
 
 .section__text__p2 {
 	font-size: 1.75rem;
-	margin-bottom: 1rem;
+	margin-bottom: rem;
 }
 
 .section__text__p3 {
@@ -209,14 +219,18 @@ section {
 	gap: 1rem;
 }
 
-/* ICONS */
+/* 
+	ICONS 
+*/
 
 .icon {
 	cursor: pointer;
 	height: 2rem;
 }
 
-/* BUTTONS */
+/* 
+	BUTTONS 
+*/
 
 .btn_container {
 	display: flex;
@@ -350,7 +364,7 @@ section {
 article {
 	display: flex;
 	width: 10rem;
-	justify-content: space-around;
+	justify-content: left;
 	gap: 0.5rem;
 }
 
